dockercon2018/stars.yml
kind: Namespace
apiVersion: v1
metadata:
  name: stars
---
kind: Namespace
apiVersion: v1
metadata:
  name: management-ui
  labels:
    role: management-ui
---
apiVersion: v1
kind: Service
metadata:
  name: management-ui 
  namespace: management-ui 
spec:
  type: NodePort
  ports:
  - port: 9001 
    nodePort: 32768
  selector:
    role: management-ui 
---
apiVersion: v1
kind: Service
metadata:
  name: backend 
  namespace: stars
spec:
  ports:
  - port: 6379
    targetPort: 6379 
  selector:
    role: backend 
---
apiVersion: v1
kind: Service
metadata:
  name: frontend 
  namespace: stars
spec:
  ports:
  - port: 80 
    targetPort: 80 
  selector:
    role: frontend 
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: stars
spec:
  ports:
  - port: 9000 
    targetPort: 9000
  selector:
    role: client
