dockercon2018/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stars-ingress
  namespace: management-ui
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: $APPLICATION_FQDN
    http:
      paths:
      - path: /
        backend:
          serviceName: management-ui
          servicePort: 9001
